Add note to QMessageBox::button() about modifying returned button

We don't have a good way to detect whether the button is modified or
not, to bail out of using the native dialog helpers.

Document that this API shouldn't be used to modify the standard
buttons (they are standard after all), and recommend the explicit
APIs for adding custom buttons instead.

Fixes: QTBUG-112525
Change-Id: I38c8ef5e1717a85f0db59c9e705d0775982ffb57
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit e9a1c53214d3936721e00bebbdc1e949e10658dd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>